# kuavo-dev-notes

./: README.md  SYMLINK_LAYOUT.md  automove_and_link.sh
kuavo-rl-opensource/: .gitignore  readme.md
kuavo-ros-opensource/: README.md
kuavo-ros-opensource/src/kuavo_arm_control/: CMakeLists.txt  package.xml
kuavo-ros-opensource/src/kuavo_arm_control/src/: gravity_comp_node.cpp
kuavo_notes/: 0.1.example.md  0.doc.md  1.start.md  10.Tai_Ji.md  13.arm_move.md  15.1.RL_lab_train.md  15.3RL_lab_sim_to_sim.md  15.4RL_lab_sim_to_real.md  16.Internet.md  17.h12_remote_control.md  18.teaching_gravity_compensation.md  19.tremble_rosbag.md  20.gripper_issue.md  21.2.local_AI_large_model.md  21.3.gemini_model.md  22.1VLA_grasping.md  22.2.tree_VLA_grasp.md  22.3.MCP_VLA_grasp.md  22.4.Lerobot_grasp.md  23.1.RL_dance_overview.md  23.2.RL_dance_motion_data.md  23.3.RL_dance_train.md  23.4.RL_dance_sim2sim.md  23.5.RL_dance_deploy_hybrid.md  23.6.RL_dance_terminal_commands.md  24.1.visual_tracking.md  25.update.md  26.joint_calibration.md  27.camera_mtion_capture.md  28.moveit_grasping.md  3.map_navigation.md  30.AI_image_identification.md  31.1.world_model.md  32.1.face_recognition.md  32.2.face_recognition_traking.md  33.height_map.md  34.two_arm_coordination.md  4.1.visual_grasping_route.md  4.2yolov8_sim.md  4.3.real_robot_yolo_environment.md  (+7 more)
kuavo_ros_application/: README.md
kuavo_ros_application/src/kuavo_visual_follow/: CMakeLists.txt  package.xml
kuavo_ros_application/src/kuavo_visual_follow/launch/: visual_follow.launch
kuavo_ros_application/src/kuavo_visual_follow/scripts/: body_track.py  head_track.py  trim_test.py
leju_robot_rl/: .gitignore  README.md  kuavo_action_ARMS_ONLY_RAD.csv  kuavo_action_HYBRID_LAFAN1LEGS_S54ARMS_RAD.csv  readme.md  (+4 more)
(+290 files in other folders)
