<?xml version="1.0"?>
<package format="2">
  <name>kuavo_visual_follow</name>
  <version>0.1.0</version>
  <description>3D head-body synergistic visual tracking (archived from kuavo_notes 24.1)</description>
  <maintainer email="dev@local">kuavo-dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>kuavo_msgs</exec_depend>
  <export/>
</package>
